--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,15 @@
   "dependencies": {
     "@tanstack/react-query": "^5.8.4",
     "axios": "^0.27.2",
+    "formik": "^2.4.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
